Fix for misaligned text in multiple dice table.

--- a/dice.css
+++ b/dice.css
@@ -11,4 +11,5 @@
 .die-button-table {
 	padding-left: 0 !important;
 	padding-right: 0 !important;
+	vertical-align: middle !important;
 }
